# resume-rag

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.resume-rag  LICENSE  README.md  build_image.py  config.json  config.py  debug_container.py  docker-compose.yml  env.example  pyproject.toml  run_local.py  setup_config.py  start.py  test_components.py  test_ingestion.py  view_logs.py
app/: __init__.py  database.py  main.py
app/api/: __init__.py  resume.py  tailor.py
app/services/: __init__.py  generation.py  ingestion.py  retrieval.py
app/vectorstore/: __init__.py  hf_embedder.py
docs/: architecture.md  development-troubleshooting.md  technical-overview.md
samples/: sample_jd.txt  sample_resume.txt
samples/output/: .gitkeep
scripts/: clear_database.py  smoke_demo.py
